about me responsive modifications Unit 1  Lesson 6  Project 2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <header class="header_sec">
-  <title>Maryann's Page
-  </title>
+  <title>Ms Jordan</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <p class="toptext">HI!&nbsp I'M&nbsp;</p>
   <h1 class="topheader">Maryann Jordan!</h1>
